*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -16,7 +16,7 @@
 | Valüt = [[ročinman kortsu]]
 | Internet-domen = [[.se]]
 | Motto = Jååå jag är håmåå
-| Aigvö = [[UTC]]+1
+| Motto = Jååå jag är håmåå
 }}
 '''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]:n ühtnii.
 
