*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -15,8 +15,8 @@
 | Religii = [[homo]], [[hristanuskond]]
 | Valüt = [[ročinman kortsu]]
 | Internet-domen = [[.se]]
-| Motto = Jååå jag är håmåå
-| Motto = Jååå jag är håmåå
+| Motto = [[Jåå jag är håmåå]]
+| Motto =
 }}
 '''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]:n ühtnii.
 
