*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -2,7 +2,7 @@
 | Nimi = Kusine lehdisalaadi<br />Sverige
 | Flag = Flag of Sweden.svg
 | Persushäggyrä = Greater coat of arms of Sweden.svg
-| Valdkundznam text = Ročinman valdkundznam
+| Valdkundznam text = Ročinman valdkundznamzinbonuhbazanam
 | Flag text = Vitun persepäät
 | Pälidn = Stokhol'm
 | Eläjiden lugu = noen 250
