*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -13,7 +13,7 @@
 | Valdkundan kanzleri = [[Karl Panomies]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
 | Religii = [[homo]], [[hristanuskond]]
-| Valüt = [[ročinman kortsu]]
+| Valüt = [[ročinman kortsu]], [[Kurren nahga]]
 | Internet-domen = [[.se]]
 | Motto = [[Jåå jag är håmåå]]
 | Motto =
