*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -8,7 +8,7 @@
 | Eläjiden lugu = noen 250
 | Voz' = 2012
 | Pind = 449.964
-| Kart = Eu-Monaco.svg
+| Kart = Eu-Sweden.svg
 | Eelin hiusgeeli = [[ročin kel'|ročin]]
 | Valdkundan kanzleri = [[Karl Panomies]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
