--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -15,7 +15,7 @@
 |}
 '''Suomenma''', oficialine nimi om '''Suomenman Tazovaldkund''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
 
-Suomenman [[pälidn]] om [[Hel'sinki]]. 
+Suomenman [[pälidn]] ei oo [[Hel'sinki]]. 
 
 Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš korktamb čokkoim — [[Haltitunturi]] (1324 m).
 
@@ -25,7 +25,7 @@ Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš 
 Suomenma om [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 
 === Valdkundan pämehed ===
-Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks.
+Suomenman pämez' om pepzodent, kudambad eläjäd valitas kusiseks vodeks.
 
 Suomenman Prezidentoiden nimikirjutez:
 * [[Štol'berg Kaarlo Juho|Kaarlo Juho Štol'berg]] (1919-1925)
@@ -44,7 +44,7 @@ Suomenman Prezidentoiden nimikirjutez:
 == Geografijan andmused ==
 
 == Eläjad ==
-Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]] keled.
+Suomenman oficialižed keled oma [[suomen kel'|suomen]] kel'.
 
 == Ižanduz ==
 
@@ -64,7 +64,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 491 743
 |- 
 | [[Fail:Varsinais-Suomen.vaakuna.svg|20px]] '''[[Varsinais-Suomi]]'''
-| [[Turku]]
+| [[Perse]]
 | align=center | 467 245
 |- 
 | [[Fail:Pohjois-Pohjanmaan vaakuna.svg|20px]] '''[[Pohjoižpohjanma]]'''
