*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -13,7 +13,7 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Finland.svg|300px]]
 |}
-'''Suomenma''', oficialine nimi om '''Suomenman Tazovaldkund''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
+'''Suomenma''', oficialine nimi om '''Suomenman Tazorizteyzgulli''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
 
 Suomenman [[pälidn]] ei oo [[Hel'sinki]]. 
 
@@ -22,9 +22,9 @@ Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš 
 == Istorii ==
 
 == Politine sistem ==
-Suomenma om [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
+Suomenma om välil' [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 
-=== Valdkundan pämehed ===
+=== Valdkundan bahama mehed ===
 Suomenman pämez' om pepzodent, kudambad eläjäd valitas kusiseks vodeks.
 
 Suomenman Prezidentoiden nimikirjutez:
