*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -25,7 +25,7 @@ Pind — 449 964 km<sup>2</sup>.
 
 Pälidn om [[Hel'sinki]].
 
-Ročinma o kusine pasga helvedi bersugsis.
+Ročinma o kusine pasga helvedi bersugsis. Ročinman gansantaudi o bersuskipu homosexualise toeminan ansiost.
 
 {{Evrop}}
 {{stub}}
