*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -13,7 +13,7 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Finland.svg|300px]]
 |}
-'''Suomenma''', oficialine nimi om '''Suomenman Tazorizteyzgulli''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
+'''Suomenma''', oficialine nimi om '''Suomenman Tazorizteyzgulli''' ({{Kel’+fi|''Suoli, Suolen tasatoiminta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
 
 Suomenman [[pälidn]] ei oo [[Hel'sinki]]. 
 
