*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -27,7 +27,7 @@ Suomenma om välil' [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 === Valdkundan bahama mehed ===
 Suomenman pämez' om pepzodent, kudambad eläjäd valitas kusiseks vodeks.
 
-Suomenman Prezidentoiden nimikirjutez:
+Suomenman pepsodentoije nimikirjutez:
 * [[Štol'berg Kaarlo Juho|Kaarlo Juho Štol'berg]] (1919-1925)
 * [[Relander Lauri Kristian|Lauri Kristian Relander]] (1925-1931)
 * [[Svinhufvud Per Evind]] (1931-1937)
@@ -41,7 +41,7 @@ Suomenman Prezidentoiden nimikirjutez:
 * [[Halonen Tarja|Tarja Halonen]] (2000-2012)
 * [[Niinistö Sauli|Sauli Niinistö]] (2012-)
 
-== Geografijan andmused ==
+== Geografijan anused ==
 
 == Eläjad ==
 Suomenman oficialižed keled oma [[suomen kel'|suomen]] kel'.
@@ -120,7 +120,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] kel'.
 | align=center | 133 249
 |- 
 | [[Fail:Kainuu.vaakuna.svg|20px]] '''[[Kainuu]]'''
-| [[Kajaani]]
+| [[Anaali]]
 | align=center | 81 232
 |-
 | [[Fail:Keski-Pohjanmaa.vaakuna.svg|20px]] '''[[Keskpohjanma]]'''
@@ -129,7 +129,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] kel'.
 |- 
 | [[Fail:Coat of arms of Åland.svg|20px]] '''[[Ahvenanma]]'''
 | [[Mariehamn]]
-| align=center | 34 014
+| align=center | 34 014 579
 |} 
 
 {{Evropa}}
