я аж чаем поперхнулась =/

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -1,31 +1,29 @@
 {{Valdkund
-| Nimi = Kusine lehdisalaadi<br />Sverige
+| Nimi = Ročinma<br />Sverige
 | Flag = Flag of Sweden.svg
-| Coat of arms = Greater coat of arms of Sweden.svg
-| Valdkundznam text = Ročinman valdkundznamzinbonuhbazanam
-| Flag text = Vitun persepäät
+| Valdkundznam = Greater coat of arms of Sweden.svg
+| Valdkundznam text = Ročinman valdkundznam
+| Flag text = Ročinman flag
 | Pälidn = Stokhol'm
-| Eläjiden lugu = noen 250
+| Eläjiden lugu = 9.555.893
 | Voz' = 2012
 | Pind = 449.964
-| Kart = Eu-Sweden.svg
-| Eelin hiusgeeli = [[ročin kel'|ročin]]
-| Valdkundan kanzleri = [[Karl Panomies]]
+| Kart = EU-Sweden.svg
+| Kel' = [[ročin kel'|ročin]]
+| Valdkundan pämez' = [[Karl XVI Gustav]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
-| Religii = [[homo]], [[hristanuskond]]
-| Valüt = [[ročinman kortsu]],, [[Kurren nahga]]
+| Religii = [[ateizm]], [[hristanuskond]]
+| Valüt = [[ročinman kron]]
 | Internet-domen = [[.se]]
-| Motto = [[Jåå jag är håmåå]]
-| Motto =
+| Telefonkod = +46
+| Aigvö = [[UTC]]+1
 }}
 '''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]:n ühtnii.
 
-Eläinden lugu — 9,4 mln.</br>
+Eläjiden lugu — 9,4 mln.</br>
 Pind — 449 964 km<sup>2</sup>.
 
-Pälidn om [[Hel'sinki]].
-
-Ročinma o kusine pasga helvedi bersugsis. Ročinman gansantaudi o bersuskipu homosexualise toeminan ansiost.
+Pälidn om [[Stokhol'm]].
 
 {{Evrop}}
 {{stub}}
