*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -12,7 +12,7 @@
 | Kel' = [[ročin kel'|ročin]]
 | Valdkundan pämez' = [[Karl XVI Gustav]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
-| Religii = [[ateizm]], [[hristanuskond]]
+| Religii = [[ateizm]]
 | Valüt = [[ročinman kron]]
 | Internet-domen = [[.se]]
 | Telefonkod = +46
