*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -13,21 +13,21 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Finland.svg|300px]]
 |}
-'''Suomenma''', oficialine nimi om '''Suomenman Tazorizteyzgulli''' ({{Kel’+fi|''Suoli, Suolen tasatoiminta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
+'''Suomenma''', oficialine nimi om '''Suomenman Tazovaldkund''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
 
-Suomenman [[pälidn]] ei oo [[Hel'sinki]]. 
+Suomenman [[pälidn]] om [[Hel'sinki]]. 
 
 Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš korktamb čokkoim — [[Haltitunturi]] (1324 m).
 
 == Istorii ==
 
 == Politine sistem ==
-Suomenma om välil' [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
+Suomenma om [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 
-=== Valdkundan bahama mehed ===
-Suomenman pämez' om pepzodent, kudambad eläjäd valitas kusiseks vodeks.
+=== Valdkundan pämehed ===
+Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks.
 
-Suomenman pepsodentoije nimikirjutez:
+Suomenman Prezidentoiden nimikirjutez:
 * [[Štol'berg Kaarlo Juho|Kaarlo Juho Štol'berg]] (1919-1925)
 * [[Relander Lauri Kristian|Lauri Kristian Relander]] (1925-1931)
 * [[Svinhufvud Per Evind]] (1931-1937)
@@ -41,10 +41,10 @@ Suomenman pepsodentoije nimikirjutez:
 * [[Halonen Tarja|Tarja Halonen]] (2000-2012)
 * [[Niinistö Sauli|Sauli Niinistö]] (2012-)
 
-== Geografijan anused ==
+== Geografijan andmused ==
 
 == Eläjad ==
-Suomenman oficialižed keled oma [[suomen kel'|suomen]] kel'.
+Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]] keled.
 
 == Ižanduz ==
 
@@ -64,7 +64,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] kel'.
 | align=center | 491 743
 |- 
 | [[Fail:Varsinais-Suomen.vaakuna.svg|20px]] '''[[Varsinais-Suomi]]'''
-| [[Perse]]
+| [[Turku]]
 | align=center | 467 245
 |- 
 | [[Fail:Pohjois-Pohjanmaan vaakuna.svg|20px]] '''[[Pohjoižpohjanma]]'''
@@ -120,7 +120,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] kel'.
 | align=center | 133 249
 |- 
 | [[Fail:Kainuu.vaakuna.svg|20px]] '''[[Kainuu]]'''
-| [[Anaali]]
+| [[Kajaani]]
 | align=center | 81 232
 |-
 | [[Fail:Keski-Pohjanmaa.vaakuna.svg|20px]] '''[[Keskpohjanma]]'''
@@ -129,7 +129,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] kel'.
 |- 
 | [[Fail:Coat of arms of Åland.svg|20px]] '''[[Ahvenanma]]'''
 | [[Mariehamn]]
-| align=center | 34 014 579
+| align=center | 34 014
 |} 
 
 {{Evropa}}
