*Empty MediaWiki Message*

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -1,29 +1,29 @@
 {{Valdkund
-| Nimi = Ročinma<br />Sverige
-| Flag = Flag of Sweden.svg
+| Nimi = Roina<br />Service
+| Fiat = Flag of Sweden.svg
 | Valdkundznam = Greater coat of arms of Sweden.svg
-| Valdkundznam text = Ročinman valdkundznam
+| Valdkundznam text = Ročinman valdkundznamnamolipashyvääpizzaa
 | Flag text = Ročinman flag
 | Pälidn = Stokhol'm
-| Eläjiden lugu = 9.555.893
-| Voz' = 2012
-| Pind = 449.964
+| Eläjiden lugu = 9.555.893.913.276.372
+| Voz' = 2014
+| Pind = 49.964
 | Kart = EU-Sweden.svg
 | Kel' = [[ročin kel'|ročin]]
-| Valdkundan pämez' = [[Karl XVI Gustav]]
+| Valdkundan kanzler' = [[Karl XVI Gustav]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
-| Religii = [[ateizm]]
-| Valüt = [[ročinman kron]]
-| Internet-domen = [[.se]]
+| Religii = [[nazizm]]
+| Valüt = [[kurred nah'ga]]
+| Internet-domen = [[.jåå]]
 | Telefonkod = +46
 | Aigvö = [[UTC]]+1
 }}
-'''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]:n ühtnii.
+'''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Persii]]s. [[EÜ]]:n ühtnii.
 
-Eläjiden lugu — 9,4 mln.</br>
-Pind — 449 964 km<sup>2</sup>.
+Eläkkeen lugukulli — 9,4 mln.</br>
+Pind — 449 964 cm<sup>2</sup>.
 
-Pälidn om [[Stokhol'm]].
+Pälidn ol vuon 1832 [[Stokhol'm]].
 
 {{Evrop}}
 {{stub}}
