Eemaldatud muudatus 53357, mille tegi [[Special:Contributions/188.238.208.108|188.238.208.108]] ([[User talk:188.238.208.108|arutelu]])

--- a/Ročinma.mw
+++ b/Ročinma.mw
@@ -1,29 +1,29 @@
 {{Valdkund
-| Nimi = Roina<br />Service
-| Fiat = Flag of Sweden.svg
+| Nimi = Ročinma<br />Sverige
+| Flag = Flag of Sweden.svg
 | Valdkundznam = Greater coat of arms of Sweden.svg
-| Valdkundznam text = Ročinman valdkundznamnamolipashyvääpizzaa
+| Valdkundznam text = Ročinman valdkundznam
 | Flag text = Ročinman flag
 | Pälidn = Stokhol'm
-| Eläjiden lugu = 9.555.893.913.276.372
-| Voz' = 2014
-| Pind = 49.964
+| Eläjiden lugu = 9.555.893
+| Voz' = 2012
+| Pind = 449.964
 | Kart = EU-Sweden.svg
 | Kel' = [[ročin kel'|ročin]]
-| Valdkundan kanzler' = [[Karl XVI Gustav]]
+| Valdkundan pämez' = [[Karl XVI Gustav]]
 | Päministr = [[Rainfel'dt Jon Fredrik|Jon Fredrik Rainfel'dt]]
-| Religii = [[nazizm]]
-| Valüt = [[kurred nah'ga]]
-| Internet-domen = [[.jåå]]
+| Religii = [[ateizm]]
+| Valüt = [[ročinman kron]]
+| Internet-domen = [[.se]]
 | Telefonkod = +46
 | Aigvö = [[UTC]]+1
 }}
-'''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Persii]]s. [[EÜ]]:n ühtnii.
+'''Ročinma''' ([[ročin kel'|roč.]]: ''Sverige'') — valdkund [[Evropa]]s. [[EÜ]]:n ühtnii.
 
-Eläkkeen lugukulli — 9,4 mln.</br>
-Pind — 449 964 cm<sup>2</sup>.
+Eläjiden lugu — 9,4 mln.</br>
+Pind — 449 964 km<sup>2</sup>.
 
-Pälidn ol vuon 1832 [[Stokhol'm]].
+Pälidn om [[Stokhol'm]].
 
 {{Evrop}}
 {{stub}}
