*Empty MediaWiki Message*

--- a/Palatoi_lugu.mw
+++ b/Palatoi_lugu.mw
@@ -1,6 +1,6 @@
 [[Fail:Dp txt2.png|pisi|oiged|200px|Palatomiden luguiden järgenduzfunkcii ''p''<sub>''n''</sub> = ''f'' (Δ''s''<sub>''n''</sub>); Δ''s''<sub>''n''</sub> = ''p''<sub>''n''+1</sub>² — ''p''<sub>''n''</sub>². Δ''p''<sub>''n''</sub> = ''p''<sub>''n''+1</sub> — ''p''<sub>''n''</sub>; Δ''p''<sub>''n''</sub> = 2, 4, 6, … .]]
 
-'''Palatoi lugu''' om [[naturaline lugu]], miččel om '''vaiše kaks'''' erased naturališt [[Jagundmahtuz|jagajad]]: [[1 (lugu)|üht]] da ičtaiž. Kaik toižed naturaližed lugud, paiči üht, nimitase [[Palakaz lugu|palakahaks luguks]]. Muga kaik ühten enambad naturaližed lugud jagase palatomikš da palakahikš. [[Luguiden teorii]] tedoidab palatomiden luguiden ičendad. [[Rengaz (matematik)|Renghiden teorijas]] palatomile luguile sättuba [[Originaline element|originaližed elementad]].
+'''Palatoi lugu''' om [[naturaline lugu]], miččel om '''vaiše kaks'''' erased naturališt [[Jagundmahtuz|jagajad]]: [[1 (lugu)|üht]] da ičtaiž. Kaik toižed naturaližed lugud, paiči ühtes, nimitase [[Palakaz lugu|palakahaks luguks]]. Muga kaik ühten enambad naturaližed lugud jagase palatomikš da palakahikš. [[Luguiden teorii]] tedoidab palatomiden luguiden ičendad. [[Rengaz (matematik)|Renghiden teorijas]] palatomile luguile sättuba [[Originaline element|originaližed elementad]].
 
 Voden 2013 uhokun surembaižes tetabas palatomas lugus om 17,425,170 decimališt lugud.
 
