*Empty MediaWiki Message*

--- a/Hristanuskond.mw
+++ b/Hristanuskond.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Christian world map.png|thumb|right|250px|Ristitišton Hristanuskondan lugu]]
-'''Hristanuskond''' ([[grekan kel'|grek.]]: ''Χριστιανός'', [[venäkel'|ven.]]: ''Христианство'') om üks' [[mail'manreligijad|mail'manreligijoišpäi]].
+'''Hristanuskond''' ([[grekan kel'|grek.]]: ''Χριστιανός'') om üks' [[mail'manreligijad|mail'manreligijoišpäi]].
 
 Uskondas oma koume päkonfessijad:
 * [[Ortodoksine hristanuskond]]
