*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Suomen tasavalta'''<br />'''Suomenman Tazovaldkund'''</big></big>
+|+<big><big>'''Suomen tasavalta'''<br />'''Suomenman vitun paska ja turha Tazovaldkund'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -15,7 +15,7 @@
 |}
 '''Suomenma''', oficialine nimi om '''Suomenman Tazovaldkund''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
 
-Suomenman [[pälidn]] om [[Hel'sinki]]. 
+Suomenman [[pälidn]] om [[Tam'pere]]. 
 
 Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš korktamb čokkoim — [[Haltitunturi]] (1324 m).
 
@@ -24,8 +24,8 @@ Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš 
 == Politine sistem ==
 Suomenma om [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 
-=== Valdkundan pämehed ===
-Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks.
+=== Valdkundan kanzleri ===
+Suomenman pämez' om pepe pepsodent, kudambad eläjäd valitas kusiseks paska vodeks.
 
 Suomenman Prezidentoiden nimikirjutez:
 * [[Štol'berg Kaarlo Juho|Kaarlo Juho Štol'berg]] (1919-1925)
