*Empty MediaWiki Message*

--- a/Minsk.mw
+++ b/Minsk.mw
@@ -9,7 +9,7 @@
 |-
 |Pind|| 308 км²
 |}
-'''Minsk''' ([[Vaugedvenäkel'|vaugedvenäkelel]]: ''Мінск'', [[Venäkel'|venäkelel]]: ''Минск'', 1939 vodhesai — ''Mensk'') om [[Vaugedvenäma]]n pälidn, [[Minskan agj]]an da [[Minskan rajon]]an adminisrativine keskuz (niihe adminisrativižhe ühtnikoihe iče lidn ei mülü), vägilidn. Se om valdkundan politine, ekonomine, kul'turine da tedoline keskuz. Minskas om Ripmatomiden Valdkundoiden Ühtištusen päfater. Lidnan sijaduz om läz valdkundan geografišt keskust, Sviločjogen randal. Minskan pind om 307,8 км². 2011 vodel eläjiden lugu - 1 864,1 tuhad ristitud.
+'''Minsk''' ([[Vaugedvenäkel'|vaugedvenäkelel]]: ''Мінск'', [[Venäkel'|venäkelel]]: ''Минск'', vodhesai 1939 — ''Mensk'') om [[Vaugedvenäma]]n pälidn, [[Minskan agj]]an da [[Minskan rajon]]an adminisrativine keskuz (niihe adminisrativižhe ühtnikoihe iče lidn ei mülü), vägilidn. Se om valdkundan politine, ekonomine, kul'turine da tedoline keskuz. Minskas om Ripmatomiden Valdkundoiden Ühtištusen päfater. Lidnan sijaduz om läz valdkundan geografišt keskust, Sviločjogen randal. Minskan pind om 307,8 км². 2011 vodel eläjiden lugu - 1 864,1 tuhad ristitud.
 
 Minsk om mugažo kaikiš järedamb transportsol'm Vaugedvenämas. Siš om 2 lendimportad: Minsk-1 da penemb rahvahaline aeroport Minsk; päraudtestancii. 1984 vodespäi lidnas radab metropoliten, kudambas om kaks' linijad da 25 stancijad.
 
