--- a/Gül'mamedov_Dašgin.mw
+++ b/Gül'mamedov_Dašgin.mw
@@ -1,2 +1,4 @@
 [[Fail:Dashgyn Gulmammadov.jpg|thumb|right|280px|Dashgin Gülmămedov]]
 '''Dashgin Gülmămed oglu Gülmămedov''' - (12.09.1977 Kachagan, Marneuli, Gruzia) Shat Turok Karapapak (Prinche Karapapaks), politik. Pisatel.
+{{stub}}
+[[Kategorii:Valdkundmehed]]
