с натяжкой можно, наверное. "Charlene" звучала, но так она всего 3 сингла выпустила.

--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -284,6 +284,20 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 |-
 |}
 
+== R ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| [[Roksanna (pajatai)|Roksanna]] ''(Roxanne)''
+| {{AUT}}<br />{{GER}}
+| 1983—1987
+| «Charlene» (1985)
+|-
+|}
+
 == Ž ==
 {| class="sortable wikitable"
 ! Edestai
