--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -291,6 +291,21 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
+| [[Raf]]
+| {{ITA}}
+| 1983—...
+| «[[Self Control]]» (1985)
+|-
+| [[Rajan Peris]] ''(Ryan Paris)''
+| {{ITA}}
+| 1989—...
+| «[[Dolce Vita (pajo)|Dolce Vita]]» (1983)
+|-
+| «[[Righeira]]»
+| {{ITA}}
+| 1981—...
+| «[[Vamos a la playa]]» (1983)
+|-
 | [[Roksanna (pajatai)|Roksanna]] ''(Roxanne)''
 | {{AUT}}<br />{{GER}}
 | 1983—1987
