*Empty MediaWiki Message*

--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -327,4 +327,18 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 |-
 |}
 
+== T ==
+{| class="sortable wikitable"
+! Edestai
+! Valdkund
+! Voded
+! Kaikiš tetabižiš pajod
+|-
+| «[[The Reynolds Girls]]»
+| {{GRB}}
+| 1987—1989
+| «I'd Rather Jack» (1989)
+|-
+|}
+
 [[Kategorii:Edestajiden nimikirjutesed]]
