*Empty MediaWiki Message*

--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -48,7 +48,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | 1987—1998
 | «[[My Bed is Too Big]]» (1988), «Love Me on the Rocks» (1989), «Nobody Makes Me Crazy (Like You Do)» (1989)
 |-
-| [[Bonni Tailer]]
+| [[Bonni Tailer]] ''(Bonnie Tyler)''
 | {{GBR}}
 | 1970—...
 | «[[Total Eclipse of the Heart]]» (1982), «[[Holding Out for a Hero]]» (1984)
@@ -105,7 +105,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Hantington Eddi|Eddi Hantington]]
+| [[Hantington Eddi|Eddi Hantington]] ''(Eddy Huntington)''
 | {{GBR}}
 | 1983—...
 | «U.S.S.R.» (1986)
@@ -162,7 +162,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Din Heizel|Heizel Din]]
+| [[Din Heizel|Heizel Din]] ''(Hazell Dean)'''
 | {{GBR}}
 | 1975—...
 | «[[Whatever I Do (Wherever I Go)]]» (1984), «[[Who's Leaving Who]]» (1986)
@@ -204,12 +204,12 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Ken Laslo]]
+| [[Ken Laslo]] ''(Ken Laszlo)''
 | {{ITA}}
 | 1984—...
 | «[[Hey Hey Guy]]» (1984), «[[Tonight]]» (1985), «[[Don't Cry]]» (1986)
 |-
-| [[Kim Uaild]]
+| [[Kim Uaild]] ''(Kim Wilde)''
 | {{GBR}}
 | 1980—...
 | «[[Kids in America]]» (1981)
@@ -233,7 +233,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | 1984—1995, 2000
 | «PowerRun» (1987)
 |-
-| [[Ricco Linda Džo|Linda Džo Ricco]]
+| [[Ricco Linda Džo|Linda Džo Ricco]] ''(Linda Jo Rizzo)''
 | {{ITA}}<br />{{GER}}
 | 1985—...
 | «You're My First, You're My Last» (1986)
@@ -252,22 +252,22 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Meirin Maik|Maik Meirin]]
+| [[Meirin Maik|Maik Meirin]] ''(Mike Mareen)''
 | {{GER}}
 | 1980—...
 | «Love Spy» (1986), «Agent of Liberty» (1987)
 |-
-| [[Kein Medlin|Medlin Kein]]
+| [[Kein Medlin|Medlin Kein]] ''(Madleen Kane)''
 | {{SWE}}
 | 1986—...
 | «You And I» (1979), «[[You Can]]» (1981), «I'm No Angel» (1985)
 |-
-| [[Smit Mendi|Mendi Smit]]
+| [[Smit Mendi|Mendi Smit]] ''(Mandy Smith)''
 | {{GBR}}
 | 1978—...
 | «I Just Can't Wait» (1987), «Positive Reaction» (1987)
 |-
-| [[Krecu Mihai|Mihai Krecu]]
+| [[Krecu Mihai|Mihai Krecu]] ''(Mihai Crețu)''
 | {{ROU}}<br />{{GER}}
 | 1978—...
 | «[[Samurai (Did You Ever Dream)]]» (1986)
@@ -277,7 +277,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | 1984—1987, 1998—2003
 | «You're My Heart, You're My Soul» (1984), «You Can Win If You Want» (1984), «Cheri, Cheri Lady» (1985), «Brother Louie» (1986),<br />«Atlantis Is Calling (S.O.S. for Love)» (1986), «Geronimo's Cadillac» (1986)
 |-
-| [[Hed Mürrei|Mürrei Hed]]
+| [[Hed Mürrei|Mürrei Hed]] ''(Murray Head)''
 | {{GBR}}
 | 1966—...
 | «[[One Night in Bangkok]]» (1984)
@@ -320,7 +320,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Mas Žanna|Žanna Mas]]
+| [[Mas Žanna|Žanna Mas]] ''(Jeanne Mas)''
 | {{FRA}}
 | 1978—...
 | «[[Johnny, Johnny]]» (1985), «[[En rouge et noir]]» (1986)
@@ -335,7 +335,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Kaikiš tetabižiš pajod
 |-
 | «[[The Reynolds Girls]]»
-| {{GRB}}
+| {{GBR}}
 | 1987—1989
 | «I'd Rather Jack» (1989)
 |-
