*Empty MediaWiki Message*

--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -53,6 +53,11 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | 1970—...
 | «[[Total Eclipse of the Heart]]» (1982), «[[Holding Out for a Hero]]» (1984)
 |-
+| [[Brajan Ais]] ''(Bryan Ice)''
+| {{ITA}}
+| 1985—...
+| «[[Talking to the Night]]» (1985), «Night Girl» (1987)
+|-
 | «[[Bronski Beat]]»
 | {{GBR}}
 | 1983—1995
@@ -162,7 +167,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 ! Voded
 ! Kaikiš tetabižiš pajod
 |-
-| [[Din Heizel|Heizel Din]] ''(Hazell Dean)'''
+| [[Din Heizel|Heizel Din]] ''(Hazell Dean)''
 | {{GBR}}
 | 1975—...
 | «[[Whatever I Do (Wherever I Go)]]» (1984), «[[Who's Leaving Who]]» (1986)
