--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -280,7 +280,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | «[[Modern Talking]]»
 | {{GER}}
 | 1984—1987, 1998—2003
-| «You're My Heart, You're My Soul» (1984), «You Can Win If You Want» (1984), «Cheri, Cheri Lady» (1985), «Brother Louie» (1986),<br />«Atlantis Is Calling (S.O.S. for Love)» (1986), «Geronimo's Cadillac» (1986)
+| «[[You're My Heart, You're My Soul]]» (1984), «[[You Can Win If You Want]]» (1984), «[[Cheri, Cheri Lady]]» (1985), «[[Brother Louie]]» (1986), «[[Atlantis Is Calling (S.O.S. for Love)]]» (1986), «[[Geronimo's Cadillac]]» (1986)
 |-
 | [[Hed Mürrei|Mürrei Hed]] ''(Murray Head)''
 | {{GBR}}
