--- a/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
+++ b/Znamasižiden_evrodiskoedestajiden_nimikirjutez.mw
@@ -330,7 +330,7 @@ Personalijad i kollektivad, kudamboil oli vaiše «sijaline» satuz i jätiba mi
 | 1983—...
 | «Happy Children» (1983)
 |-
-| [[Petti Rajan]]
+| [[Petti Rajan]] ''(Patty Ryan)''
 | {{GER}}
 | 1986—...
 | «Stay With Me Tonight» (1986), «(You're) My Love, (You're) My Life» (1986), «I Don't Wanna Loose You Tonight» (1987), «Love is The Name of The Game» (1987)
