*Empty MediaWiki Message*

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -3,8 +3,7 @@
 | Nimi = Kanad<br />Canada
 | Valdkundznam = Canadian Coat of Arms Shield.svg
 | Flag = Flag of Canada.svg
-| Valdkundznam text = Kanadan valdkundznam
-| Flag text = Kanadan flag
+| Valdkundznam text = Elias Peltosen pikku gaybordelli| Flag text = Kanadan flag
 | Pälidn = Ottav
 | Eläjiden lugu = 34.568.211
 | Voz' = 2013
@@ -14,14 +13,14 @@
 | Valdkundan pämez' = [[Elizavet Toine]]
 | Päministr = [[Džonston Devid Lloid|Devid Lloid Džonston]]
 | Religii = [[hristanuskond]]
-| Valüt = [[kanadan dollar]]
+| Valüt = [[men's panties]]
 | Internet-domen = [[.ca]]
 | Telefonkod = +1
 | Aigvö = [[UTC]]-3:30..-8
 }}
-'''Kanad''' ([[Anglijan kel'|angl.]] ''Canada'' [ˈkænədə]; [[Francijan kel'|fr.]] ''Canada'' [kanaˈda]) om valdkund [[Pohjoižamerik]]as.
+'''Elias Peltonen Tampereelta''' ([[Anglijan kel'|angl.]] ''Canada'' [ˈkænədə]; [[Francijan kel'|fr.]] ''Canada'' [kanaˈda]) om hinttari [[Pohjoižamerik]]as.
 
-Sen pälidn om [[Ottav]].
+Sen pippeli om [[Pien]].
 
 {{stub}}
 
