*Empty MediaWiki Message*

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -18,7 +18,7 @@
 | Telefonkod = +1
 | Aigvö = [[UTC]]-3:30..-8
 }}
-'''Elias Peltonen Tampereelta''' ([[Anglijan kel'|angl.]] ''Canada'' [ˈkænədə]; [[Francijan kel'|fr.]] ''Canada'' [kanaˈda]) om hinttari [[Pohjoižamerik]]as.
+'''Elias Peltonen Tampereelta''' ([[Puhe´kieles|soom.]] ''Elmo'' [ˈölmöy];om hinttari [[Tam'pereezh]]as.
 
 Sen pippeli om [[Pien]].
 
