*Empty MediaWiki Message*

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -4,8 +4,7 @@
 | Valdkundznam = Canadian Coat of Arms Shield.svg
 | Flag = Flag of Canada.svg
 | Valdkundznam text = Elias Peltosen pikku gaybordelli| Flag text = Kanadan flag
-| Pälidn = Ottav
-| Eläjiden lugu = 34.568.211
+| Pälidn = Blue oyster| Eläjiden lugu = 34.568.211
 | Voz' = 2013
 | Pind = 9.984.670
 | Kart = Canada blank.gif
