*Empty MediaWiki Message*

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -21,6 +21,9 @@
 
 Sen pippeli om [[Pien]].
 
+==Elias Aukusti Peltonen==
+Elias Aukusti Peltonen haisee pazkdhalthda.
+
 {{stub}}
 
 [[Kategorii:Kanad|*]]
