--- a/Kanad.mw
+++ b/Kanad.mw
@@ -1,7 +1,6 @@
 {{1000}}
 {{Valdkund
-| Nimi = Kanad<br />Canada
-| Valdkundznam = Canadian Coat of Arms Shield.svg
+| Nimi = Elmon bordelli<br />Blúe Oystér| Valdkundznam = Canadian Coat of Arms Shield.svg
 | Flag = Flag of Canada.svg
 | Valdkundznam text = Elias Peltosen pikku gaybordelli| Flag text = Kanadan flag
 | Pälidn = Blue oyster| Eläjiden lugu = 34.568.211
