*Empty MediaWiki Message*

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -5,14 +5,13 @@
 | Valdkundznam text = Elias Peltosen pikku gaybordelli| Flag text = Kanadan flag
 | Pälidn = Blue oyster| Eläjiden lugu = 34.568.211
 | Voz' = 2013
-| Pind = 9.984.670
-| Kart = Canada blank.gif
+| Elmon pilin koko = 3.2µm| Kart = Canada blank.gif
 | Kel' = [[anglijan kel'|anglijan]], [[francijan kel'|francijan]]
 | Valdkundan pämez' = [[Elizavet Toine]]
 | Päministr = [[Džonston Devid Lloid|Devid Lloid Džonston]]
 | Religii = [[hristanuskond]]
 | Valüt = [[men's panties]]
-| Internet-domen = [[.ca]]
+| Internet-domen = [[.xxx]]
 | Telefonkod = +1
 | Aigvö = [[UTC]]-3:30..-8
 }}
