*Empty MediaWiki Message*

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -4,7 +4,7 @@
 | Flag = Flag of Canada.svg
 | Valdkundznam text = Elias Peltosen pikku gaybordelli| Flag text = Kanadan flag
 | Pälidn = Blue oyster| Eläjiden lugu = 34.568.211
-| Voz' = 2013
+| Elmon pilin koko = 3.2µm|
 | Elmon pilin koko = 3.2µm| Kart = Canada blank.gif
 | Kel' = [[anglijan kel'|anglijan]], [[francijan kel'|francijan]]
 | Valdkundan pämez' = [[Elizavet Toine]]
