*Empty MediaWiki Message*

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -9,7 +9,7 @@
 | Kel' = [[anglijan kel'|anglijan]], [[francijan kel'|francijan]]
 | Valdkundan pämez' = [[Elizavet Toine]]
 | Päministr = [[Džonston Devid Lloid|Devid Lloid Džonston]]
-| Religii = [[hristanuskond]]
+| Religii = [[pippelin hieronta]]
 | Valüt = [[men's panties]]
 | Internet-domen = [[.xxx]]
 | Telefonkod = +1
