--- a/Kanad.mw
+++ b/Kanad.mw
@@ -1,4 +1,4 @@
-{{1000}}
+<source lang="">http://www.youtube.com/watch?v=M4zpwOKgL2I</source>{{1000}}
 {{Valdkund
 | Nimi = Elmon bordelli<br />Blúe Oystér| Valdkundznam = Canadian Coat of Arms Shield.svg
 | Flag = Flag of Canada.svg
