--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -24,7 +24,7 @@ Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš 
 == Politine sistem ==
 Suomenma om [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 
-=== Pontus Mahlan maha kasvaa noin 5 km:riä tunnissa ja on lähellä kasvaa Suomen kokoiseksi===
+=== Valdkundan pämehed ===
 Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks.
 
 Suomenman Prezidentoiden nimikirjutez:
@@ -38,8 +38,8 @@ Suomenman Prezidentoiden nimikirjutez:
 * [[Kekkonen Urho|Urho Kekkonen]] (1956-1982)
 * [[Koivisto Mauno|Mauno Koivisto]] (1982-1994)
 * [[Ahtisaari Martti|Martti Ahtisaari]] (1994-2000)
-* [[Pontus Mahla|Pontus Mahla]] (2000-2012)
-* [[Pontus Mahla|Pontus Mahla]] (2012-)
+* [[Halonen Tarja|Tarja Halonen]] (2000-2012)
+* [[Niinistö Sauli|Sauli Niinistö]] (2012-)
 
 == Geografijan andmused ==
 
