administrator will be here soon, banana loosers

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -1,26 +1,27 @@
-<source lang="">http://www.youtube.com/watch?v=M4zpwOKgL2I</source>{{1000}}
+{{1000}}
 {{Valdkund
-| Nimi = Elmon bordelli<br />Blúe Oystér| Valdkundznam = Canadian Coat of Arms Shield.svg
+| Nimi = Kanad<br />Canada
+| Valdkundznam = Canadian Coat of Arms Shield.svg
 | Flag = Flag of Canada.svg
-| Valdkundznam text = Elias Peltosen pikku gaybordelli| Flag text = Kanadan flag
-| Pälidn = Blue oyster| Eläjiden lugu = 34.568.211
-| Elmon pilin koko = 3.2µm|
-| Elmon pilin koko = 3.2µm| Kart = Canada blank.gif
+| Valdkundznam text = Kanadan valdkundznam
+| Flag text = Kanadan flag
+| Pälidn = Ottav
+| Eläjiden lugu = 34.568.211
+| Voz' = 2013
+| Pind = 9.984.670
+| Kart = Canada blank.gif
 | Kel' = [[anglijan kel'|anglijan]], [[francijan kel'|francijan]]
 | Valdkundan pämez' = [[Elizavet Toine]]
 | Päministr = [[Džonston Devid Lloid|Devid Lloid Džonston]]
-| Religii = [[pippelin hieronta]]
-| Valüt = [[men's panties]]
-| Internet-domen = [[.xxx]]
+| Religii = [[ateizm]], [[hristanuskond]]
+| Valüt = [[kanadan dollar]]
+| Internet-domen = [[.ca]]
 | Telefonkod = +1
 | Aigvö = [[UTC]]-3:30..-8
 }}
-'''Elias Peltonen Tampereelta''' ([[Puhe´kieles|soom.]] ''Elmo'' [ˈölmöy];om hinttari [[Tam'pereezh]]as.
+'''Kanad''' ([[Anglijan kel'|angl.]] ''Canada'' [ˈkænədə]; [[Francijan kel'|fr.]] ''Canada'' [kanaˈda]) om valdkund [[Pohjoižamerik]]as.
 
-Sen pippeli om [[Pien]].
-
-==Elias Aukusti Peltonen==
-Elias Aukusti Peltonen haisee pazkdhalthda.
+Sen pälidn om [[Ottav]].
 
 {{stub}}
 
