не совсем, но к этому уже идёт, увы

--- a/Kanad.mw
+++ b/Kanad.mw
@@ -13,7 +13,7 @@
 | Kel' = [[anglijan kel'|anglijan]], [[francijan kel'|francijan]]
 | Valdkundan pämez' = [[Elizavet Toine]]
 | Päministr = [[Džonston Devid Lloid|Devid Lloid Džonston]]
-| Religii = [[ateizm]], [[hristanuskond]]
+| Religii = [[hristanuskond]], [[ateizm]]
 | Valüt = [[kanadan dollar]]
 | Internet-domen = [[.ca]]
 | Telefonkod = +1
