*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Suomen tasavalta'''<br />'''Suomenman Tazovaldkund'''</big></big>
+|+<big><big>'''Peltosen paska'''<br />'''Suomenman Tazovaldkund'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -35,14 +35,14 @@ Suomenman Prezidentoiden nimikirjutez:
 * [[Rüti Risto|Risto Rüti]] (1940-1944)
 * [[Mannerhaim Karl Gustaf Emil'|Karl Gustaf Emil' Mannerhaim]] (1944-1946)
 * [[Paasikivi Juho Kusti|Juho Kusti Paasikivi]] (1946-1956)
-* [[Kekkonen Urho|Urho Kekkonen]] (1956-1982)
+* [[Peltonen Elias|Urho Kekkonen]] (1956-1982)
 * [[Koivisto Mauno|Mauno Koivisto]] (1982-1994)
 * [[Ahtisaari Martti|Martti Ahtisaari]] (1994-2000)
-* [[Halonen Tarja|Tarja Halonen]] (2000-2012)
-* [[Niinistö Sauli|Sauli Niinistö]] (2012-)
+* [[Peltonen Elias|Tarja Halonen]] (2000-2012)
+* [[Peltonen Elias|Sauli Niinistö]] (2012-)
 
 == Geografijan andmused ==
-
+Peltonen Elias«Peltonen Elias»
 == Eläjad ==
 Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]] keled.
 
@@ -64,7 +64,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 491 743
 |- 
 | [[Fail:Varsinais-Suomen.vaakuna.svg|20px]] '''[[Varsinais-Suomi]]'''
-| [[Turku]]
+| [[Peltonen Elias]]
 | align=center | 467 245
 |- 
 | [[Fail:Pohjois-Pohjanmaan vaakuna.svg|20px]] '''[[Pohjoižpohjanma]]'''
