*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -25,8 +25,7 @@ Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš 
 Suomenma om [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 
 === Valdkundan pämehed ===
-Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks.
-
+Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks. <big>Peltonen Elias</big>
 Suomenman Prezidentoiden nimikirjutez:
 * [[Štol'berg Kaarlo Juho|Kaarlo Juho Štol'berg]] (1919-1925)
 * [[Relander Lauri Kristian|Lauri Kristian Relander]] (1925-1931)
@@ -41,13 +40,13 @@ Suomenman Prezidentoiden nimikirjutez:
 * [[Peltonen Elias|Tarja Halonen]] (2000-2012)
 * [[Peltonen Elias|Sauli Niinistö]] (2012-)
 
-== Geografijan andmused ==
+== Peltonen Elias andmused ==
 Peltonen Elias«Peltonen Elias»
 == Eläjad ==
 Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]] keled.
 
 == Ižanduz ==
-
+<blockquote>Peltonen Elias</blockquote>
 == Provincijad ==
 [[Fail:Provinces in Finland.svg|right|300 px]]
 {| 
