*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Peltosen paska'''<br />'''Suomenman Tazovaldkund'''</big></big>
+|+<big><big>'''Suomen tasavalta'''<br />'''Suomenman Tazovaldkund'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -25,7 +25,8 @@ Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš 
 Suomenma om [[Parlamentine tazovaldkund|parlamentine]] [[tazovaldkund]].
 
 === Valdkundan pämehed ===
-Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks. <big>Peltonen Elias</big>
+Suomenman pämez' om prezident, kudambad eläjäd valitas kudeks vodeks.
+
 Suomenman Prezidentoiden nimikirjutez:
 * [[Štol'berg Kaarlo Juho|Kaarlo Juho Štol'berg]] (1919-1925)
 * [[Relander Lauri Kristian|Lauri Kristian Relander]] (1925-1931)
@@ -34,19 +35,19 @@ Suomenman Prezidentoiden nimikirjutez:
 * [[Rüti Risto|Risto Rüti]] (1940-1944)
 * [[Mannerhaim Karl Gustaf Emil'|Karl Gustaf Emil' Mannerhaim]] (1944-1946)
 * [[Paasikivi Juho Kusti|Juho Kusti Paasikivi]] (1946-1956)
-* [[Peltonen Elias|Urho Kekkonen]] (1956-1982)
+* [[Kekkonen Urho|Urho Kekkonen]] (1956-1982)
 * [[Koivisto Mauno|Mauno Koivisto]] (1982-1994)
 * [[Ahtisaari Martti|Martti Ahtisaari]] (1994-2000)
-* [[Peltonen Elias|Tarja Halonen]] (2000-2012)
-* [[Peltonen Elias|Sauli Niinistö]] (2012-)
+* [[Halonen Tarja|Tarja Halonen]] (2000-2012)
+* [[Niinistö Sauli|Sauli Niinistö]] (2012-)
 
-== Peltonen Elias andmused ==
-Peltonen Elias«Peltonen Elias»
+== Geografijan andmused ==
+
 == Eläjad ==
 Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]] keled.
 
 == Ižanduz ==
-<blockquote>Peltonen Elias</blockquote>
+
 == Provincijad ==
 [[Fail:Provinces in Finland.svg|right|300 px]]
 {| 
@@ -63,7 +64,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 491 743
 |- 
 | [[Fail:Varsinais-Suomen.vaakuna.svg|20px]] '''[[Varsinais-Suomi]]'''
-| [[Peltonen Elias]]
+| [[Turku]]
 | align=center | 467 245
 |- 
 | [[Fail:Pohjois-Pohjanmaan vaakuna.svg|20px]] '''[[Pohjoižpohjanma]]'''
