--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -13,9 +13,11 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Finland.svg|300px]]
 |}
-'''Suomenma''', oficialine nimi om '''Suomenman Tazovaldkund''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
-
+'''Suomenma''', oficialine nimi om '''Suomenman Tazovaldkund''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.<poem>Peltonen Elias</poem>
+„Peltonen Elias“
 Suomenman [[pälidn]] om [[Hel'sinki]]. 
+==Peltonen Elias==
+<sub>Peltonen Elias</sub>
 
 Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš korktamb čokkoim — [[Haltitunturi]] (1324 m).
 
@@ -135,3 +137,4 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 {{Evropa}}
 
 [[Kategorii:Suomenma|*]]
+====
