--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -90,11 +90,11 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 202 204
 |- 
 | [[Fail:Etelä-Pohjanmaan maakunnan vaakuna.svg|20px]] '''[[Suvipohjanma]]'''
-| [[Seinäjoki]]
+| [[Seinäjogi]]
 | align=center | 193 735
 |- 
 | [[Fail:Lapin maakunnan vaakuna.svg|20px]] '''[[Lappi]]'''
-| [[Rovaniemi]]
+| [[Rovanem']]
 | align=center | 183 318
 |- 
 | [[Fail:Kymenlaakson maakunnan vaakuna.svg|20px]] '''[[Kümenlaakso]]'''
@@ -137,4 +137,5 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 {{Evropa}}
 
 [[Kategorii:Suomenma|*]]
+
 ====
