*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -13,11 +13,9 @@
 |-
 | align=center colspan=2 | [[Fail:EU-Finland.svg|300px]]
 |}
-'''Suomenma''', oficialine nimi om '''Suomenman Tazovaldkund''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.<poem>Peltonen Elias</poem>
-„Peltonen Elias“
+'''Suomenma''', oficialine nimi om '''Suomenman Tazovaldkund''' ({{Kel’+fi|''Suomi, Suomen tasavalta''}}) om valdkund Pohjoiževropas. [[EÜ]]:n ühtnii.
+
 Suomenman [[pälidn]] om [[Hel'sinki]]. 
-==Peltonen Elias==
-<sub>Peltonen Elias</sub>
 
 Pind: kaik — 338 424,38 km², saum vezid — 34 525,54 km² (10,2 %). Kaikiš korktamb čokkoim — [[Haltitunturi]] (1324 m).
 
@@ -90,11 +88,11 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 | align=center | 202 204
 |- 
 | [[Fail:Etelä-Pohjanmaan maakunnan vaakuna.svg|20px]] '''[[Suvipohjanma]]'''
-| [[Seinäjogi]]
+| [[Seinäjoki]]
 | align=center | 193 735
 |- 
 | [[Fail:Lapin maakunnan vaakuna.svg|20px]] '''[[Lappi]]'''
-| [[Rovanem']]
+| [[Rovaniemi]]
 | align=center | 183 318
 |- 
 | [[Fail:Kymenlaakson maakunnan vaakuna.svg|20px]] '''[[Kümenlaakso]]'''
@@ -137,5 +135,3 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 {{Evropa}}
 
 [[Kategorii:Suomenma|*]]
-
-====
